[metadata]
name = lsqfit
version = 13.0.3
author = G. Peter Lepage
author_email = g.p.lepage@cornell.edu
license = GPLv3
license_files = LICENSE.txt
url = https://github.com/gplepage/lsqfit
description = Utilities for nonlinear least-squares fits.
long_description = file: README.rst

[options]
zip_safe = False
packages =
    lsqfit
package_dir = 
    = src
python_requires = >=2.7
install_requires = 
    numpy>=1.16
    scipy>=0.16
    gvar>=11.1
    importlib-metadata; python_version<'3.8'

include_package_data = False
