[metadata]
name = lsqfit
version = 13.2.4
author = G. Peter Lepage
author_email = g.p.lepage@cornell.edu
license = GPLv3
license_files = LICENSE.txt
url = https://github.com/gplepage/lsqfit
description = Utilities for nonlinear least-squares fits.
long_description = file: README.rst

[options]
zip_safe = False
packages =
    lsqfit
package_dir = 
    = src
python_requires = >=3.9
install_requires = 
    numpy>=1.24
    gvar>=13.0.1
    vegas>=6.1

include_package_data = False
